w04-fix
